[tool.poetry]
name = "home-work-1"
version = "0.1.0"
description = ""
authors = ["Ruslan2512 <ruslansirenko25@gmail.com>"]
readme = "README.md"
packages = [{include = "home_work_1"}]

[tool.poetry.dependencies]
python = "^3.8"
path = "^16.6.0"
logging = "^0.4.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
